--- a/src/app/templates/login.html
+++ b/src/app/templates/login.html
@@ -2,7 +2,7 @@
     <img src="app/images/background.jpg" id="bg" class="img-responsive" alt="" />
     <div class="row">
         <div class="col-md-12 text-center content">
-            <h4>Welcome to Delhi School</h4>
+            <h4>Xplore-Local</h4>
             <form name="loginForm" class="form-horizontal loginForm">
                 <!-- request OTP section -->
                 <div class="form-group" ng-show="!fetchedOtp">
@@ -10,6 +10,9 @@
                         <div class="input-group">
                             <span class="input-group-addon">
                                     <i class="mobIcon fa fa-lg fa-mobile" aria-hidden="true"></i>
+                                </span>
+                            <span class="input-group-addon countryCode">
+                                +91                                 
                                 </span>
                             <input name="mobileNumber" required class="form-control" type="tel" ng-model="mobileNumber" placeholder="Mobile Number">
                         </div>
