--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -33,33 +33,133 @@
                 </div>
             </div>
         </div>
-        <div class="menuIconsContainer">
+        <div class="container menuIconsContainer">
             <div class=" row row-fluid">
-                <!-- <div class="col-md-3 menuIconsDiv"> -->
-                    <div class="col-md-2 menuIconsDiv">
-                        <img src="app/images/street-food.png" class="menuIcons" /><br/>
-                        <label>Street Foods</label>
-                    </div>
-                <!-- </div> -->
-                <!-- <div class="col-md-2 menuIconsDiv"> -->
-                    <div class="col-md-2 menuIconsDiv">
-                        <img src="app/images/weekend-getaway.png" class="menuIcons" /><br/>
-                        <label>Weekend Getaways</label>
-                    </div>
-                <!-- </div> -->
-                <!-- <div class="col-md-2 menuIconsDiv"> -->
-                    <div class="col-md-2 menuIconsDiv">
-                        <img src="app/images/road-trip.png" class="menuIcons" /><br/>
-                        <label>Road Trips</label>
-                    </div>
-                <!-- </div> -->
-                <!-- <div class="col-md-2 menuIconsDiv"> -->
-                    <div class="col-md-2 menuIconsDiv">
-                        <img src="app/images/local-events.png" class="menuIcons" /><br/>
-                        <label>Local Events</label>
-                    </div>
-                <!-- </div> -->
+                <div class="col-md-3 menuIconsDiv">
+                    <img src="app/images/street-food.png" class="menuIcons img-circle" />
+                    <br/>
+                    <label>Street Food</label>
+                </div>
+                <div class="col-md-3 menuIconsDiv">
+                    <img src="app/images/weekend-getaway.png" class="menuIcons img-circle" />
+                    <br/>
+                    <label>Adventure</label>
+                </div>
+                <div class="col-md-3 menuIconsDiv">
+                    <img src="app/images/sight-seeing.png" class="menuIcons img-circle" />
+                    <br/>
+                    <label>Sightseeing</label>
+                </div>
+                <div class="col-md-3 menuIconsDiv">
+                    <img src="app/images/games.png" class="menuIcons img-circle" />
+                    <br/>
+                    <label>Games</label>
+                </div>
             </div>
+        </div>
+        <div class="row row-fluid imageCard">
+            <span class="imageCardContainer">
+                <img src="app/images/street-food/vvpuram.png" class="img-fluid mx-auto thumbnailCard" />
+                <span class="imageCardContent">
+                    <p>V V Puram Food Street</p>
+                </span>
+            </span>
+            <span class="imageCardContainer">
+            <img src="app/images/street-food/central-tiffin-room.png" class="img-fluid mx-auto thumbnailCard" />
+            <span class="imageCardContent">
+                    <p>Central Tiffin Room</p>
+                </span>
+            </span>
+            <span class="imageCardContainer">
+            <img src="app/images/street-food/brahmin-coffee-bar.png" class="img-fluid mx-auto thumbnailCard" />
+            <span class="imageCardContent">
+                    <p>Brahmin’s Coffee Bar</p>
+                </span>
+            </span>
+            <span class="imageCardContainer">
+            <img src="app/images/street-food/hari-sandwich-zone.png" class="img-fluid mx-auto thumbnailCard" />
+            <span class="imageCardContent">
+                    <p>Hari’s Sandwich Zone</p>
+                </span>
+            </span>
+        </div>
+        <div class="row row-fluid imageCard">
+            <span class="imageCardContainer">
+            <img src="app/images/adventure/cycling.png" class="img-fluid mx-auto thumbnailCard" />
+            <span class="imageCardContent">
+                    <p>Cycling to Devarayanadurga</p>
+                </span>
+            </span>
+            <span class="imageCardContainer">
+            <img src="app/images/adventure/bennerghatta.png" class="img-fluid mx-auto thumbnailCard" />
+            <span class="imageCardContent">
+                    <p>Bannerghatta National Park</p>
+                </span>
+            </span>
+            <span class="imageCardContainer">
+            <img src="app/images/adventure/rafting.png" class="img-fluid mx-auto thumbnailCard" />
+            <span class="imageCardContent">
+                    <p>Rafting at Davanagere</p>
+                </span>
+            </span>
+            <span class="imageCardContainer">
+                <img src="app/images/adventure/savandurga.png" class="img-fluid mx-auto thumbnailCard" />
+                <span class="imageCardContent">
+                    <p>Savandurga Hills</p>
+                </span>
+            </span>
+        </div>
+        <div class="row row-fluid imageCard">
+            <span class="imageCardContainer">
+                <img src="app/images/sight-seeing/skandagiri.png" class="img-fluid mx-auto thumbnailCard" />
+                <span class="imageCardContent">
+                    <p>Skandagiri</p>
+                </span>
+            </span>
+            <span class="imageCardContainer">
+            <img src="app/images/sight-seeing/bheemeshwari.png" class="img-fluid mx-auto thumbnailCard" />
+            <span class="imageCardContent">
+                    <p>Bheemeshwari</p>
+                </span>
+            </span>
+            <span class="imageCardContainer">
+            <img src="app/images/sight-seeing/lumbini.png" class="img-fluid mx-auto thumbnailCard" />
+            <span class="imageCardContent">
+                    <p>Lumbini Gardens</p>
+                </span>
+            </span>
+            <span class="imageCardContainer">
+            <img src="app/images/sight-seeing/nandi-hills.png" class="img-fluid mx-auto thumbnailCard" />
+            <span class="imageCardContent">
+                    <p>Nandi Hills</p>
+                </span>
+            </span>
+        </div>
+        <div class="row row-fluid imageCard">
+            <span class="imageCardContainer">
+            <img src="app/images/games/dirt-bike.png" class="img-fluid mx-auto thumbnailCard" />
+            <span class="imageCardContent">
+                    <p>Dirt Mania</p>
+                </span>
+            </span>
+            <span class="imageCardContainer">
+            <img src="app/images/games/riddle-room.png" class="img-fluid mx-auto thumbnailCard" />
+            <span class="imageCardContent">
+                    <p>Riddle Room</p>
+                </span>
+            </span>
+            <span class="imageCardContainer">
+                <img src="app/images/games/breakout.png" class="img-fluid mx-auto thumbnailCard" />
+                <span class="imageCardContent">
+                    <p>Breakout</p>
+                </span>
+            </span>
+            <span class="imageCardContainer">
+            <img src="app/images/games/flight.png" class="img-fluid mx-auto thumbnailCard" />
+            <span class="imageCardContent">
+                    <p>Flight 4 Fantasy</p>
+                </span>
+            </span>
         </div>
     </div>
 </div>
